--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,15 @@
+bot.conf
+TODO.md
+.idea/
+# From https://github.com/github/gitignore/blob/master/Gradle.gitignore
 .gradle
-.idea
-/build/
-/buildSrc/
+buildSrc/
 /list/
 /utilities/
-bot.conf
-
+*.class
 # Ignore Gradle GUI config
 gradle-app.setting
 
-# Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
-!gradle-wrapper.jar
 
-# Cache of project
-.gradletasknamecache
 
-# # Work around https://youtrack.jetbrains.com/issue/IDEA-116898
-# gradle/wrapper/gradle-wrapper.properties
+
