--- a/.gitignore
+++ b/.gitignore
@@ -2,16 +2,22 @@ bot.conf
 TODO.md
 .idea/
 # From https://github.com/github/gitignore/blob/master/Gradle.gitignore
-.gradle
 app/build
 app/out
 buildSrc/
 /list/
 /utilities/
 *.class
+
+# From https://github.com/github/gitignore/blob/master/Gradle.gitignore
+.gradle
+/build/
+
 # Ignore Gradle GUI config
 gradle-app.setting
 
+# Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
+!gradle-wrapper.jar
 
 
 
