final change for gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,7 @@ buildSrc/
 *.class
 
 # From https://github.com/github/gitignore/blob/master/Gradle.gitignore
-.gradle
+.gradle/
 /build/
 
 # Ignore Gradle GUI config
