--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,6 @@
-bot.conf
+.idea
+
+.gradle
+build
+
 TODO.md
-.idea/
-# From https://github.com/github/gitignore/blob/master/Gradle.gitignore
-app/build
-app/out
-buildSrc/
-/list/
-/utilities/
-*.class
-
-# From https://github.com/github/gitignore/blob/master/Gradle.gitignore
-.gradle/
-/build/
-
-# Ignore Gradle GUI config
-gradle-app.setting
-
-# Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
-!gradle-wrapper.jar
-
-
-
